--- a/forum-client/src/components/areas/Nav.css
+++ b/forum-client/src/components/areas/Nav.css
@@ -7,10 +7,6 @@ nav {
   padding-right: 1em;
 }
 
-.user-menu li {
-  margin-left: 2em;
-}
-
 .categories-list {
   display: flex;
   margin-top: 0;
@@ -33,10 +29,5 @@ nav {
     padding-left: 1em;
     padding-right: 1em;
     border-bottom: var(--border);
-  }
-
-  .user-menu li {
-    margin-left: 0.5em;
-    margin-bottom: 2em;
   }
 }
