--- a/forum-client/src/components/areas/usermenu/UserMenu.css
+++ b/forum-client/src/components/areas/usermenu/UserMenu.css
@@ -1,9 +1,13 @@
 .user-menu {
   display: flex;
+  align-content: baseline;
+  padding-left: 0;
+  margin: auto 0 auto 0;
 }
 
 .user-menu li {
-  margin-left: 0.2em;
+  margin: auto 0 auto 1em;
+  margin-left: 1em;
 }
 
 .menu-name {
@@ -13,5 +17,10 @@
 @media screen and (orientation: portrait) and (max-width: 768px) {
   .user-menu {
     display: block;
+  }
+
+  .user-menu li {
+    margin-left: 0.5em;
+    margin-bottom: 2em;
   }
 }
